[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "udger-v4"
version = "5.0.1"
authors = [{ name="The Udger Team", email="info@udger.com" }]
description = "Fast and reliable User Agent parser and IP classifier for Python"
readme = "README.md"
requires-python = ">=3.5"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["parser", "useragent"]
dependencies = [
    "pysqlite3 >= 0.4.7",
]

[project.urls]
"Homepage" = "https://github.com/udger/udger-python-v4"
"Bug Tracker" = "https://github.com/udger/udger-python-v4/issues"
